@@ -1,4 +1,5 @@
 bear:
+Fixed an issue when the filter was used by mplayer2.exe, seems it was selecting the first stream of every group prior to playing, hence it would then select the stream that was the Browser option and opened the open file window. 
 Fixed a bug where the filter would stall if the NetSource graph failed due to no data flow.
 Added a open file browser feature to allow changing files via the IAMStreamSelect interface.
 Added selection capability of any active NetSource stream graphs via the IAMStreamSelect interface.
